# actinrings

./: .gitignore  README.md  setup.cfg  setup.py
actinrings/: __init__.py  analytical.py  double_overlap_model.py  fem_parsing.py  plots.py  tracks_model.py
scripts/: plot_actinrings_freqs.py  plot_actinrings_lfes.py  plot_actinrings_radii.py
