[metadata]
name = actinrings
version = attr: actinrings.__version__
author = Alexander Cumberworth
author_email = alex@cumberworth.org
description = Library for calculations used in...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cumberworth/actinrings
project_urls =
    Paper = 
    Data for paper = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    matplotlibstyles
    numpy
    pandas
    scipy
